
file(GLOB SOURCES_EEPROM_TOOL linux/eepromtool/*.c)
file(GLOB SOURCES_SIMPLE_TEST linux/simple_test/*.c)
file(GLOB SOURCES_SLAVE_INFO  linux/slaveinfo/*.c)

add_executable(eepromtool ${SOURCES_EEPROM_TOOL})
target_link_libraries(eepromtool soem)
add_executable(simple_test ${SOURCES_SIMPLE_TEST})
target_link_libraries(simple_test soem)
add_executable(slaveinfo ${SOURCES_SLAVE_INFO})
target_link_libraries(slaveinfo soem)

if(WIN32)
   target_link_libraries(eepromtool  wpcap.lib Packet.lib Ws2_32.lib Winmm.lib)
   target_link_libraries(simple_test wpcap.lib Packet.lib Ws2_32.lib Winmm.lib)
   target_link_libraries(slaveinfo   wpcap.lib Packet.lib Ws2_32.lib Winmm.lib)
elseif(UNIX)
   target_link_libraries(eepromtool  pthread rt)
   target_link_libraries(simple_test pthread rt)
   target_link_libraries(slaveinfo   pthread rt)
elseif(${CMAKE_SYSTEM_NAME} MATCHES "rt-kernel")
  target_link_libraries(slaveinfo "-Wl,--start-group -l${BSP} -l${ARCH} -lkern -ldev -lsio -lblock -lfs -lusb -llwip -leth -li2c -lrtc -lcan -lnand -lspi -lnor -lpwm -ladc -ltrace -lc -lm -Wl,--end-group")
endif()

install(TARGETS eepromtool DESTINATION bin)
if(NOT DEFINED HOST_INSTALL)
   install(TARGETS simple_test DESTINATION bin)
endif()
install(TARGETS slaveinfo DESTINATION bin)
